--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -12,8 +12,9 @@
     <h1>All Products</h1>
     <ul>
         <% for(let product of products) { %>
-            <li>
-                <%= product.name %>
+            <li> <a href="/products/<%= product._id%>">
+                    <%= product.name %>
+                </a>
             </li>
             <%} %>
     </ul>
