--- a/views/products/show.ejs
+++ b/views/products/show.ejs
@@ -21,6 +21,8 @@
         <li>Category: <%= product.category %>
         </li>
     </ul>
+
+    <a href="/products"> All Products</a>
 </body>
 
 </html>
