Styling with bootstrap, adding ejs files, updating path for public directory

--- a/views/products/show.ejs
+++ b/views/products/show.ejs
@@ -1,28 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
+<%- include('partials/head')%>
+    <%- include('partials/header')%>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-        <%= product.name %>
-    </title>
-</head>
+        <h1>
+            <%= product.name %>
+        </h1>
+        <ul>
+            <li>Price: $<%= product.price %>
+            </li>
+            <li>Category: <%= product.category %>
+            </li>
+        </ul>
 
-<body>
+        <a href="/products" class="text-success"> All Products</a>
 
-    <h1>
-        <%= product.name %>
-    </h1>
-    <ul>
-        <li>Price: $<%= product.price %>
-        </li>
-        <li>Category: <%= product.category %>
-        </li>
-    </ul>
-
-    <a href="/products"> All Products</a>
-</body>
-
-</html>
+        <%- include('partials/footer') %>
