building carousel for home page, updaiting ejs files, learning how to create a good looking show page for each product

--- a/views/products/home.ejs
+++ b/views/products/home.ejs
@@ -1,53 +1,65 @@
 <%- include('partials/head')%>
     <%- include('partials/header')%>
+        <%- include('partials/main')%>
 
 
-        <div class="container">
-            <div class="row">
-                <div class="col-8">
-                    <h2> Farmers Around de world</h2>
-                    <p> We are a group of farmers Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur
-                        velit magnam
-                        rerum iure commodi, eius qui, asperiores ducimus temporibus tempora odit esse nesciunt debitis,
-                        pariatur
-                        iste architecto dolor incidunt libero distinctio? Debitis assumenda odit quia temporibus labore
-                        facere sed
-                        doloribus veniam hic, necessitatibus ea ullam dolor non magnam amet quis fugiat laudantium sequi
-                        vero
-                        corporis esse. Eveniet, cum iste quidem eum ab praesentium quasi a excepturi delectus vitae
-                        minima
-                        aspernatur vel reiciendis obcaecati culpa laudantium dolores autem eius suscipit error?
-                        Blanditiis non
-                        obcaecati nam vero beatae, aut, recusandae quisquam a praesentium nulla tempora ex tenetur
-                        ipsam, ullam
-                        dolores dolorum porro.</p>
-                </div>
-                <div class="col-4">
-                    <h3> Experiences</h3>
-                    <br>
-                    <figure class="figure">
-                        <img src="https://images.unsplash.com/photo-1492496913980-501348b61469?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=668&q=80"
-                            class="figure-img img-fluid rounded" alt="mans garden">
-                        <figcaption class="figure-caption">A caption for the above image.</figcaption>
-                    </figure>
-                    <figure class="figure">
-                        <img src="https://images.unsplash.com/photo-1464226184884-fa280b87c399?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1500&q=80"
-                            class="figure-img img-fluid rounded" alt="bundle of assorted vegetables">
-                        <figcaption class="figure-caption">A caption for the above image.</figcaption>
-                    </figure>
-                    <figure class="figure">
-                        <img src="https://images.unsplash.com/photo-1447624799968-c704f86dc931?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=802&q=80"
-                            class="figure-img img-fluid rounded" alt="white and brown eggs">
-                        <figcaption class="figure-caption">A caption for the above image.</figcaption>
-                    </figure>
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-8">
+                        <h2> Farmers Around de world</h2>
+                        <p> We are a group of farmers Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Aspernatur
+                            velit magnam
+                            rerum iure commodi, eius qui, asperiores ducimus temporibus tempora odit esse nesciunt
+                            debitis,
+                            pariatur
+                            iste architecto dolor incidunt libero distinctio? Debitis assumenda odit quia temporibus
+                            labore
+                            facere sed
+                            doloribus veniam hic, necessitatibus ea ullam dolor non magnam amet quis fugiat laudantium
+                            sequi
+                            vero
+                            corporis esse. Eveniet, cum iste quidem eum ab praesentium quasi a excepturi delectus vitae
+                            minima
+                            aspernatur vel reiciendis obcaecati culpa laudantium dolores autem eius suscipit error?
+                            Blanditiis non
+                            obcaecati nam vero beatae, aut, recusandae quisquam a praesentium nulla tempora ex tenetur
+                            ipsam, ullam
+                            dolores dolorum porro.</p>
+                    </div>
+                    <div class="col-4">
+                        <h3> Experiences</h3>
+                        <br>
+                        <figure class="figure">
+                            <a href="#"> <img
+                                    src="https://images.unsplash.com/photo-1492496913980-501348b61469?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=668&q=80"
+                                    class="figure-img img-fluid rounded" alt="mans garden"> </a>
+                            <figcaption class="figure-caption">During the pass year our ...</figcaption>
+                        </figure>
+                        <figure class="figure">
+                            <a href="#"> <img
+                                    src="https://images.unsplash.com/photo-1464226184884-fa280b87c399?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1500&q=80"
+                                    class="figure-img img-fluid rounded" alt="bundle of assorted vegetables"> </a>
+                            <figcaption class="figure-caption"> Our community is working hard to give you the best
+                                products
+                            </figcaption>
+                        </figure>
+                        <figure class="figure">
+                            <a href=""> <img
+                                    src="https://images.unsplash.com/photo-1447624799968-c704f86dc931?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=802&q=80"
+                                    class="figure-img img-fluid rounded" alt="white and brown eggs"></a>
+                            <figcaption class="figure-caption">We are proud to show you how this has been a great
+                                opportunity for us </figcaption>
+                        </figure>
+                    </div>
                 </div>
             </div>
-        </div>
 
 
 
 
-        <!-- 
+            <!-- 
         Got Milk? Dairy
         products are important
         for building healthy
@@ -103,4 +115,4 @@
         enough calcium every
         day. -->
 
-        <%- include('partials/footer') %>
+            <%- include('partials/footer') %>
