--- a/views/products/partials/head.ejs
+++ b/views/products/partials/head.ejs
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <script src="/js/jquery.js"></script>
     <script src="/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 
 <body class="d-flex flex-column h-100" data-new-gr-c-check-loaded="14.984.0" data-gr-ext-installed>
