--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -1,15 +1,22 @@
 <%- include('partials/head')%>
     <%- include('partials/header')%>
 
-        <h1>All Products</h1>
-        <ul>
-            <% for(let product of products) { %>
-                <li> <a href="/products/<%= product._id%>">
-                        <%= product.name %>
-                    </a>
-                </li>
-                <%} %>
-        </ul>
+        <div class="container">
+            <h1>All Products</h1>
+            <ul>
+                <% for(let product of products) { %>
+                    <li> <a href="/products/<%= product._id%>">
+                            <%= product.name %>
+                        </a>
+                    </li>
+                    <%} %>
+            </ul>
+        </div>
 
 
         <%- include('partials/footer') %>
+
+            <figure class="figure">
+                <img src="..." class="figure-img img-fluid rounded" alt="...">
+                <figcaption class="figure-caption">A caption for the above image.</figcaption>
+            </figure>
