--- a/views/products/new.ejs
+++ b/views/products/new.ejs
@@ -1,18 +1,21 @@
 <%- include('partials/head')%>
     <%- include('partials/header')%>
 
-        <h1> Add A Product</h1>
-        <form action="/products" method="POST">
-            <label for="name">Product Name</label>
-            <input type="text" name="name" id="name" placeholder="product name">
-            <label for="price"> Price (unit)</label>
-            <input type="number" name="price" id="price" placeholder="type price">
-            <select name="category" id="">
-                <option value="fruit">Fruit</option>
-                <option value="vegetable">Vegetable</option>
-                <option value="dairy">Dairy</option>
-            </select>
-            <button>Submit</button>
-        </form>
+
+        <div class="container">
+            <h1> Add A Product</h1>
+            <form action="/products" method="POST">
+                <label for="name">Product Name</label>
+                <input type="text" name="name" id="name" placeholder="product name">
+                <label for="price"> Price (unit)</label>
+                <input type="number" name="price" id="price" placeholder="type price">
+                <select name="category" id="">
+                    <option value="fruit">Fruit</option>
+                    <option value="vegetable">Vegetable</option>
+                    <option value="dairy">Dairy</option>
+                </select>
+                <button>Submit</button>
+            </form>
+        </div>
 
         <%- include('partials/footer') %>
