--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,15 +1,5 @@
-.carousel-container{
-    width: 100%;
-    margin: auto;
-    border: red 2px solid;
-}
-
-.carousel-slide {
-    display: flex;
-    width: 100%;
-    /* height: 300px;  @media*/  
-    /* height: 500px; */
-}
-img{
-    width: 100%;
+img {
+width: 700px;
+height: 700px;
+    object-fit: cover;
 }
