--- a/views/products/show.ejs
+++ b/views/products/show.ejs
@@ -5,9 +5,7 @@
             <h1>
                 <%= product.name %>
             </h1>
-            <figure class="figure">
-                <img src="<%=product.img%>" class="figure-img img-fluid rounded" alt="...">
-                <figcaption class="figure-caption">
+
                     <ul>
                         <li>Price: $<%= product.price %>
                         </li>
@@ -15,11 +13,8 @@
                         </li>
 
                     </ul>
-                </figcaption>
-
-            </figure>
-
+ 
             <br>
-            <a href="/products" class="text-success"> All Products</a>
+            <a href="/products"> All Products</a>
         </div>
         <%- include('partials/footer') %>
