ussues fixed with validators, ad

--- a/views/products/edit.ejs
+++ b/views/products/edit.ejs
@@ -4,11 +4,11 @@
 
         <div class="container">
             <h1> Edit Product</h1>
-            <form action="/products/<%=product.id %>" method="POST">
+            <form action="/products/<%=product.id%>?_method=PUT" method="POST">
                 <label for="name">Product Name</label>
                 <input type="text" name="name" id="name" placeholder="product name" value="<%= product.name%>">
                 <label for="price"> Price (unit)</label>
-                <input type="number" name="price" id="price" placeholder="type price">
+                <input type="number" name="price" id="price" placeholder="price" value="<%= product.price%>">
                 <select name="category" id="">
                     <option value="fruit">Fruit</option>
                     <option value="vegetable">Vegetable</option>
@@ -19,3 +19,6 @@
         </div>
 
         <%- include('partials/footer') %>
+
+
+        <!-- remember: add a query string setting (?_method=PUT) for this example-->
