--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -11,7 +11,10 @@
                     </li>
                     <%} %>
             </ul>
+
+            <a href="/products/new"> New Product</a>
         </div>
+
 
 
         <%- include('partials/footer') %>
