--- a/views/products/new.ejs
+++ b/views/products/new.ejs
@@ -11,12 +11,15 @@
                 <input type="number" name="price" id="price" placeholder="type price">
                 <label for="category">Select Category </label>
                 <select name="category" id="category">
-                    <option value="fruit">Fruit</option>
-                    <option value="vegetable">Vegetable</option>
-                    <option value="dairy">Dairy</option>
+                    <% for(let category of categories) { %>
+                        <option value="<%=category%>"><%=category%> </option>
+                    <%}%> 
+
                 </select>
                 <button>Submit</button>
             </form>
+            <a href="/products">Go to All Products</a>
         </div>
+
 
         <%- include('partials/footer') %>
