--- a/views/products/show.ejs
+++ b/views/products/show.ejs
@@ -16,5 +16,7 @@
  
             <br>
             <a href="/products"> All Products</a>
+            <a href="/products/<%=product._id%>/edit"> Edit</a>
         </div>
         <%- include('partials/footer') %>
+         
