--- a/views/products/edit.ejs
+++ b/views/products/edit.ejs
@@ -9,10 +9,10 @@
                 <input type="text" name="name" id="name" placeholder="product name" value="<%= product.name%>">
                 <label for="price"> Price (unit)</label>
                 <input type="number" name="price" id="price" placeholder="price" value="<%= product.price%>">
-                <select name="category" id="">
-                    <option value="fruit" <%=product.category === 'fruit' ? 'selected' : ''  %> >Fruit</option>
-                    <option value="vegetable"<%=product.category === 'vegetable' ? 'selected' : ''  %> >Vegetable</option>
-                    <option value="dairy"<%=product.category === 'dairy' ? 'selected' : ''  %> >Dairy</option>
+                <select name="category" id="category">
+                    <% for(let category of categories) { %>
+                        <option value="<%=category%>" <%= product.category === category ? 'selected' : ' '  %>>  <%=category%> </option>
+                    <%}%> 
                 </select>
                 <button>Submit</button>
             </form>
