--- a/views/products/show.ejs
+++ b/views/products/show.ejs
@@ -17,6 +17,11 @@
             <br>
             <a href="/products"> All Products</a>
             <a href="/products/<%=product._id%>/edit"> Edit</a>
+
+            <form action="/products/<%=product._id%>?_method=DELETE" method="POST">
+                <button> Delete</button>
+            </form>
+            
         </div>
         <%- include('partials/footer') %>
          
