adding: filtering by category

--- a/views/products/show.ejs
+++ b/views/products/show.ejs
@@ -9,7 +9,7 @@
                     <ul>
                         <li>Price: $<%= product.price %>
                         </li>
-                        <li>Category: <%= product.category %>
+                        <li>Category: <a href="/products?category=<%= product.category %>"> <%= product.category %> </a>
                         </li>
 
                     </ul>
